--- a/inventario/templates/inventario/productos.html
+++ b/inventario/templates/inventario/productos.html
@@ -1,14 +1,14 @@
 {% extends 'base/base.html' %}
 {% load static %}
 
-{% block title %}Lista de Productos{% endblock %}
+{% block title %}Inventario{% endblock %}
 
 {% block content %}
 <div class="container-fluid mt-4">
 
     <!-- Encabezado + Botón Registrar Entrada -->
     <div class="d-flex align-items-center mb-3">
-        <h2 class="mr-auto">Productos</h2>
+        <h2 class="mr-auto">Inventario</h2>
         <button class="btn btn-success"
                 data-bs-toggle="modal"
                 data-bs-target="#modalRegistrarEntrada"
