--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -122,13 +122,20 @@
                 Inventario
             </div>
 
-                        <li class="nav-item">
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'inventario:lista_productos' %}">
                     <i class="fas fa-fw fa-layer-group"></i>
                     <span>Inventario</span>
                 </a>
             </li>
 
+
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'inventario:lista_entradas' %}">
+                    <i class="fas fa-fw fa-layer-group"></i>
+                    <span>Entradas</span>
+                </a>
+            </li>
             <!-- Agregar mas Funciones -->
 
             {% endif %}
