--- a/inventario/templates/inventario/productos.html
+++ b/inventario/templates/inventario/productos.html
@@ -207,14 +207,14 @@
     </div>
     </div>
 
-    <!-- Modal Editar Producto -->
+    <!-- Modal Crear Producto -->
     <div class="modal fade" id="modalCrearProducto" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-xl modal-dialog-scrollable">
         <div class="modal-content"><!-- Aquí inyectamos modal_crear_producto.html vía AJAX --></div>
     </div>
     </div>
 
-    <!-- Modal Crear Producto al vuelo -->
+    <!-- Modal Editar Producto al vuelo -->
     <div class="modal fade" id="modalEditarProducto" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-xl modal-dialog-scrollable">
         <div class="modal-content"><!-- Aquí inyectamos modal_editar_producto.html vía AJAX --></div>
