--- a/inventario/templates/inventario/modales/modal_editar_entrada.html
+++ b/inventario/templates/inventario/modales/modal_editar_entrada.html
@@ -3,22 +3,13 @@
   <button type="button" class="close" data-dismiss="modal">&times;</button>
 </div>
 <div class="modal-body">
-  <form
-    id="form-entrada"
-    method="post"
-    action="{% url 'inventario:editar_entrada' entrada.id %}">
-    <div id="entrada-form-fields">
-      {% include 'inventario/modales/fragmento_form_entrada.html' %}
+  <form id="form-editar-entrada" method="post"
+        action="{% url 'inventario:editar_entrada' entrada.pk %}">
+    <div id="editar-form-fields">
+      {% include 'inventario/modales/fragmento_form_editar_entrada.html' %}
     </div>
-    <div class="text-right mt-3">
-      <button type="submit" class="btn btn-primary">Guardar Cambios</button>
+    <div class="modal-footer">
+      <button type="submit" class="btn btn-primary">Guardar cambios</button>
     </div>
   </form>
-</div>
-
-{# Reutilizamos el mismo modal para “crear al vuelo” dentro de editar #}
-<div class="modal fade" id="modalCrearProducto" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content"><!-- carga AJAX de modal_crear_producto.html --></div>
-  </div>
 </div>
