--- a/inventario/templates/inventario/modales/fragmento_form_producto.html
+++ b/inventario/templates/inventario/modales/fragmento_form_producto.html
@@ -28,12 +28,17 @@
         {% endif %}
         </div>
 
-        <div class="col-md-6 mb-3">
-        <label for="{{ form.marca.id_for_label }}" class="form-label">Marca</label>
+    <div class="col-md-6 mb-3">
+        <label for="{{ form.marca.id_for_label }}">Marca</label>
         {{ form.marca }}
-        {% if form.marca.errors %}
-            <div class="text-danger small">{{ form.marca.errors.0 }}</div>
-        {% endif %}
+        <datalist id="marcas-datalist">
+            {% for nombre in marcas_existentes %}
+            <option value="{{ nombre }}"></option>
+            {% endfor %}
+        </datalist>
+        {% for err in form.marca.errors %}
+            <div class="text-danger small">{{ err }}</div>
+        {% endfor %}
         </div>
     </div>
 
