--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -20,9 +20,11 @@
 <link href="{% static 'base/css/sb-admin-2.css' %}" rel="stylesheet">
 <link href="{% static 'base/css/personalizado.css' %}" rel="stylesheet">
 
-<!-- Estilos Externos -->
+<!-- CSS principal de Select2 -->
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css"/>
+
+<!-- Tema Bootstrap-4 para Select2 -->
+<link href="https://cdn.jsdelivr.net/npm/@ttskch/select2-bootstrap4-theme@1.3.2/dist/select2-bootstrap4.min.css" rel="stylesheet" />
 
 </head>
 
