--- a/inventario/templates/inventario/modales/fragmento_form_producto.html
+++ b/inventario/templates/inventario/modales/fragmento_form_producto.html
@@ -33,12 +33,13 @@
         <select name="marca"
                 id="{{ form.marca.id_for_label }}"
                 class="form-control select2-tags"
+                data-placeholder="Escribe o selecciona una marca…"
                 required>
-            <option value="">---------</option>
+            <option></option>
             {% for nombre in marcas_existentes %}
             <option value="{{ nombre }}"
                 {% if form.marca.value == nombre %}selected{% endif %}>
-                {{ nombre }}
+            {{ nombre }}
             </option>
             {% endfor %}
         </select>
