--- a/inventario/templates/inventario/modales/fragmento_form_producto.html
+++ b/inventario/templates/inventario/modales/fragmento_form_producto.html
@@ -89,7 +89,7 @@
 
     <div class="row">
         <div class="col-md-6 mb-3">
-        <label for="{{ form.descripcion.id_for_label }}" class="form-label">Descripción</label>
+        <label for="{{ form.descripcion.id_for_label }}" class="form-label">Descripción Tecnica</label>
         {{ form.descripcion }}
         {% if form.descripcion.errors %}
             <div class="text-danger small">{{ form.descripcion.errors.0 }}</div>
@@ -97,7 +97,7 @@
         </div>
 
         <div class="col-md-6 mb-3">
-        <label for="{{ form.nota.id_for_label }}" class="form-label">Nota</label>
+        <label for="{{ form.nota.id_for_label }}" class="form-label">Nota u Observación</label>
         {{ form.nota }}
         {% if form.nota.errors %}
             <div class="text-danger small">{{ form.nota.errors.0 }}</div>
