--- a/inventario/templates/inventario/modales/fragmento_form_producto.html
+++ b/inventario/templates/inventario/modales/fragmento_form_producto.html
@@ -2,13 +2,24 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-6 mb-3">
-        <label for="{{ form.tipo.id_for_label }}" class="form-label">Tipo</label>
-        {{ form.tipo }}
-        {% if form.tipo.errors %}
-            <div class="text-danger small">{{ form.tipo.errors.0 }}</div>
-        {% endif %}
-        </div>
+    <div class="col-md-6 mb-3">
+    <label for="{{ form.tipo.id_for_label }}" class="form-label">Tipo</label>
+    <select
+        name="{{ form.tipo.name }}"
+        id="{{ form.tipo.id_for_label }}"
+        class="form-control select2-tipo">
+        <option value=""></option>
+        {% for opt in form.tipo.field.queryset %}
+        <option value="{{ opt.pk }}"
+            {% if form.tipo.value|stringformat:"s" == opt.pk|stringformat:"s" %}selected{% endif %}>
+            {{ opt.nombre }}
+        </option>
+        {% endfor %}
+    </select>
+    {% if form.tipo.errors %}
+        <div class="text-danger small">{{ form.tipo.errors.0 }}</div>
+    {% endif %}
+    </div>
 
         <div class="col-md-6 mb-3">
         <label for="{{ form.nombre.id_for_label }}" class="form-label">Nombre</label>
