--- a/base/static/base/css/personalizado.css
+++ b/base/static/base/css/personalizado.css
@@ -13,3 +13,8 @@
 #template-row button {
   display: none;
 }
+
+.select2-container--bootstrap4 .select2-results__option[aria-disabled="true"] {
+  color: #c0c0c0 !important;
+  font-style: italic;
+}
