--- a/inventario/templates/inventario/modales/modal_registrar_entrada.html
+++ b/inventario/templates/inventario/modales/modal_registrar_entrada.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h5 class="modal-title">Registrar Entrada de Productos</h5>
+    <h5 class="modal-title">Registrar Entrada de Inventario</h5>
     <button type="button" class="close" data-dismiss="modal">&times;</button>
 </div>
 <div class="modal-body">
