--- a/inventario/templates/inventario/modales/modal_editar_producto.html
+++ b/inventario/templates/inventario/modales/modal_editar_producto.html
@@ -5,7 +5,7 @@
     </button>
 </div>
 
-<div class="modal-body">
+<div class="modal-body" id="modal-body-content">
     <form id="form-editar-producto"
             method="post"
             action="{% url 'inventario:editar_producto' producto.id %}">
