--- a/inventario/templates/inventario/modales/fragmento_form_entrada.html
+++ b/inventario/templates/inventario/modales/fragmento_form_entrada.html
@@ -113,10 +113,12 @@
                   data-color="{{ prod.color }}"
                   data-modelo="{{ prod.modelo }}"
                   data-serie="{{ prod.numero_serie|default_if_none:'' }}"
-                  {% if form_linea.initial.producto and form_linea.initial.producto.id == prod.id %}
-                    selected
-                  {% endif %}>
-                  {{ prod.nombre }}
+                  {% with selected_value=form_linea.producto.value|stringformat:"s" current_id=prod.id|stringformat:"s" %}
+                    {% if selected_value == current_id %}
+                      selected
+                    {% endif %}
+                  {% endwith %}>
+                  {{ prod }}
                 </option>
               {% endfor %}
             </select>
